--- a/ClinicaDental/UI_ClinicaDental/Secretaria.Master
+++ b/ClinicaDental/UI_ClinicaDental/Secretaria.Master
@@ -2,19 +2,12 @@
 
 <!DOCTYPE html>
 
-<html lang="es">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - Clinica Dental</title>
-
-    <asp:PlaceHolder runat="server">
-        <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
-    <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+    <title></title>
+    <asp:ContentPlaceHolder ID="head" runat="server">
+    </asp:ContentPlaceHolder>
 </head>
 <body>
     <form runat="server">
@@ -47,17 +40,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/IndexSecretaria">Clinica Dental</a>
+                    <a class="navbar-brand" runat="server" href="~/IndexDentista">Clinica Dental</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         
                         
-                       
+                        <li><a runat="server" href="~/Usuarios">Usuarios</a></li>
                         <li><a runat="server" href="~/Pacientes">Pacientes</a></li>
                         <li><a runat="server" href="~/Diagnosticos">Diagnosticos</a></li>
                         <li><a runat="server" href="~/Citas">Citas</a></li>
-                       
+                        <li><a runat="server" href="~/Reportes">Reportes</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
