--- a/ClinicaDental/UI_ClinicaDental/Secretaria.Master
+++ b/ClinicaDental/UI_ClinicaDental/Secretaria.Master
@@ -47,20 +47,20 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" style="color:white" runat="server" href="~/IndexDentista">Logo</a>
+                    <a class="navbar-brand" style="color:white" runat="server" href="~/IndexSecretaria">Logo</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         
                         
-                       <li><a runat="server" style="color:white" href="~/Pacientes">Pacientes</a></li>
-                        <li><a runat="server" style="color:white" href="~/Diagnosticos">Diagnosticos</a></li>
-                        <li><a runat="server" style="color:white" href="~/Citas">Citas</a></li>
+                       <li><a runat="server" style="color:white" href="~/IndexPacientesS">Pacientes</a></li>
+                        <li><a runat="server" style="color:white" href="~/DiagnosticoS">Diagnosticos</a></li>
+                        <li><a runat="server" style="color:white" href="~/IndexCitasS">Citas</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                 <li><a runat="server" class="btn btn-primary" style="color:white" href="~/ModificarUsuario">Mi cuenta</a></li>
+                                 <%--<li><a runat="server" class="btn btn-primary" style="color:white" href="~/ModificarUsuario">Mi cuenta</a></li>--%>
                                <li><a runat="server" class="btn btn-primary" style="color:white" href="~/Login">Salir</a></li>
                             
                             </ul>
@@ -82,7 +82,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-          &nbsp; &nbsp;      <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>
+          <%--&nbsp; &nbsp;      <p>&copy; <%: DateTime.Now.Year %> - Mi aplicación ASP.NET</p>--%>
             </footer>
         </div>
     </form>
