--- a/UI/Secretaria.Master
+++ b/UI/Secretaria.Master
@@ -37,7 +37,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" style="color:white" runat="server" href="~/IndexDentista">Logo</a>
+                    <a class="navbar-brand" style="color:white" runat="server" href="~/IndexSecretaria.aspx">Logo</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -45,7 +45,7 @@
                         
                        <li><a runat="server" style="color:white" href="~/IndexPacientesS.aspx">Pacientes</a></li>
                         <li><a runat="server" style="color:white" href="~/DiagnosticoS.aspx">Diagnosticos</a></li>
-                        <li><a runat="server" style="color:white" href="~/IndexCitasS.aspx">Citas</a></li>
+                        <li><a runat="server" style="color:white" href="~/CitassS.aspx">Citas</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
